infrastructure/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: freshrss
spec:
  selector:
    app: freshrss
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
